<resources>
    <string name="app_name">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">""</string>
    <string name="tv_enter">Вход</string>
    <string name="text_password">Пароль</string>
    <string name="text_login">Логин</string>
    <string name="auth_btn_text">Вход</string>

    <string name="login_empty_error" translatable="false">Поле не может быть пустым</string>
    <string name="password_empty_error" translatable="false">Поле не можеть быть пустым</string>
    <string name="login_not_valid_error" translatable="false">Не верный формат номера телефона</string>
    <string name="password_not_valid_error" translatable="false">Пароль должен быть от 6 до 255 символов</string>
    <string name="auth_error_text" translatable="false">Логин или пароль введен неправильно</string>
    <string name="bottom_menu_main">Главная</string>
    <string name="bottom_menu_favorit">Избранное</string>
    <string name="bottom_menu_profile">Профиль</string>
</resources>